ipc/ipdl/test/ipdl/ok/Parray_Basic.ipdl
protocol Parray_Basic {
child:
    async Msg(int[] array);
};
