ipc/ipdl/test/ipdl/error/maybe_Recursive.ipdl
//error: bad syntax near `?'

protocol maybe_Recursive {
child: async Msg(int?? aa);
};
